minor spacing fix

--- a/hangman/main.css
+++ b/hangman/main.css
@@ -79,7 +79,7 @@ html * {
 .guess-line {
   text-align: center;
   width: 50px;
-  margin: 0.5em;
+  margin: 0.3em;
   padding-top: 20px;
   font-size: 1.5rem;
 }
